// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`singleton option false: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style type=\\"text/css\\">.class-one {
  color: red;
}
</style><style type=\\"text/css\\">.class-two {
  color: red;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`singleton option false: errors 1`] = `Array []`;

exports[`singleton option false: warnings 1`] = `Array []`;

exports[`singleton option not specified: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style type=\\"text/css\\">.class-one {
  color: red;
}
</style><style type=\\"text/css\\">.class-two {
  color: red;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`singleton option not specified: errors 1`] = `Array []`;

exports[`singleton option not specified: warnings 1`] = `Array []`;

exports[`singleton option true: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style type=\\"text/css\\">.class-one {
  color: red;
}
.class-two {
  color: red;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`singleton option true: errors 1`] = `Array []`;

exports[`singleton option true: warnings 1`] = `Array []`;
